--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,15 +2,15 @@ server:
   port: 8081
 
 
-eureka:
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-
-  instance:
-    prefer-ip-address: true
+#eureka:
+#  client:
+#    fetch-registry: true
+#    register-with-eureka: true
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
+#
+#  instance:
+#    prefer-ip-address: true
 
 spring:
   application:
@@ -29,3 +29,5 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
 
+  config:
+    import: optional:configserver:http://localhost:8085
